omni/tests/goldens/types/undefined_ident_07.err
tests/goldens/types/undefined_ident_07.omni:1:19: error: undefined identifier "missing7"
  let result7:int = missing7
                    ^~~ hint: declare the name before using it
